--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/exit"
+        android:id="@+id/delete"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_delete"
         android:title=""/>
