--- a/app/src/main/res/layout/fragment_add_new_note.xml
+++ b/app/src/main/res/layout/fragment_add_new_note.xml
@@ -28,7 +28,7 @@
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="@dimen/btn_width"
+        android:layout_width="@dimen/width"
         android:layout_height="wrap_content"
         android:text="@string/btn_add"
         style="@style/btn"
