--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <dimen name="text_large">20sp</dimen>
     <dimen name="app_margin">16dp</dimen>
-    <dimen name="btn_width">250dp</dimen>
+    <dimen name="width">250dp</dimen>
     <dimen name="elevation">10dp</dimen>
     <dimen name="corner_radius">10dp</dimen>
 </resources>
